# IMU_Attitude_Estimator

./: Allan_Analysis.py  CMakeLists.txt  CMakePresets.json  DataSets.py  LICENSE  README.md
cmake_modules/: FindGlog.cmake
datasets/: read me.txt  readme.txt
demo/: Test.cpp
include/: Convert.h  EKF_Attitude.h  ESKF_Attitude.h  Mahony_Attitude.h  TypeDefs.h  matplotlibcpp.h  tic_toc.h
src/: Convert.cpp  EKF_Attitude.cpp  ESKF_Attitude.cpp  Mahony_Attitude.cpp
